<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_share"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/cb_file_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/on"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_file_share_ison"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="visible"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_file_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/lt_conn_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/password_bg"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/but_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@android:color/white"
                android:background="@drawable/password_button_bg"
                android:text="@string/reset_password" />
            
        </LinearLayout>
    </LinearLayout>
    
    <Button
        android:id="@+id/sync_ip_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sync_ip_setting_title" />

    <Button
        android:id="@+id/sync_path_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sync_path_settings" />
    

</LinearLayout>
