<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    
    >

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
         >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cloud_username"
            android:layout_weight="0.2"
            android:textSize="16sp"
             />

        <EditText
            android:id="@+id/cloud_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:ems="10" 
            android:inputType="textEmailAddress"
            android:text="test@test.com"
            >

        </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
         >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cloud_password"
            android:layout_weight="0.2"
            android:textSize="16sp"
             />

        <EditText
            android:id="@+id/cloud_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:ems="10"
            android:inputType="textPassword" 
            android:text="1234"
            />

    </LinearLayout>

    <Button
        android:id="@+id/cloud_login"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:background="@drawable/password_button_bg"
        android:layout_margin="8dp"
        android:text="@string/cloud_login" />

</LinearLayout>